--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"/>
-	<link rel="stylesheet" href="css/main.css"/>
+	<link rel="stylesheet" href="/public/css/main.css"/>
 	<title>ToDo приложение</title>
 </head>
 <body>
@@ -33,6 +33,6 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/main.js"></script>
+	<script src="public/js/main.js"></script>
 </body>
 </html>
